deployment-listener.template.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: pubsub-listener-deployment
  labels:
    app: pubsub-listener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pubsub-listener
  template:
    metadata:
      labels:
        app: pubsub-listener
    spec:
      containers:
      - name: pubsub-listener
        image: gcr.io/${PROJECT_ID}/${IMAGE_NAME}:latest
        imagePullPolicy: Always
